--- a/package.json
+++ b/package.json
@@ -18,8 +18,18 @@
   },
   "homepage": "https://github.com/Alexnorvag/olchat#readme",
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.1",
+    "connect-mongodb": "^1.1.5",
+    "ejs": "^2.5.7",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "mongoose": "^5.0.3",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "socket.io": "^2.0.4"
   }
 }
